# taxing

./: .gitignore  ARCHITECTURE_REVIEW.md  CONTEXT.md  README.md  cats.yaml  config.yaml  justfile  pyproject.toml  pytest.ini
docs/: MINING_FINDINGS.md  README.md  algorithms.md  architecture.md  audit_defense_status.md  cli.md  context.md  ingestion.md  issues.md  mining.md  models.md  phase_2b_cli.md  phase_2b_design.md  phase_3a_property.md  phases.md  tax.md  tax_og.md  transfers.md
rules/: accessories.txt  accom.txt  accommodation.txt  bars.txt  beems.txt  bnpl.txt  books.txt  business.txt  car.txt  clothing.txt  convenience.txt  cosmetics.txt  craft.txt  debts.txt  dining.txt  electronics.txt  entertainment.txt  events.txt  fees.txt  flights.txt  food_delivery.txt  forex.txt  furniture.txt  gifts.txt  groceries.txt  hobbies.txt  home_office.txt  home_services.txt  home_stores.txt  income.txt  insurance.txt  internet.txt  investment.txt  liquor.txt  medical.txt  mobile_accessories.txt  nicotine.txt  office_supplies.txt  online_retail.txt  parking.txt  (+22 more)
rules/donations/: donations.txt
rules/entertainment/: accom.txt  events.txt  sports.txt  travel.txt
rules/health/: therapy.txt
rules/home/: home_office.txt  home_stores.txt
rules/meals/: bars.txt
rules/personal/: accessories.txt
rules/subscriptions/: mobile.txt
rules/vehicle/: fuel.txt  maintenance.txt
src/: cli.py  pipeline.py
src/cli/: __init__.py
src/core/: __init__.py  audit.py  cats.py  classify.py  config.py  deduce.py  dedupe.py  depreciation.py  household.py  metrics.py  (+10 more)
tests/: conftest.py
(+69 files in other folders)
